--- a/burn-temps/css/styles.css
+++ b/burn-temps/css/styles.css
@@ -17,12 +17,27 @@ body {
 }
 
 header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: #3f51b5;
     color: white;
-    padding: 10px;
+    padding: 10px 20px;
     text-align: center;
     flex: 0 0 40px;
     border-radius: 2px;
+}
+
+.refresh-icon {
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+}
+
+
+.refresh-icon.disabled {
+    fill: #aaa;
+    cursor: not-allowed;
 }
 
 main {
@@ -90,13 +105,16 @@ thead {
 }
 
 th, td {
-    padding: 10px;
+    padding: 2px;
     text-align: left;
     border: 1px solid #e0e0e0;
 }
 
 tbody tr:nth-child(even) {
     background-color: #f2f2f2;
+}
+td.temp {
+    text-align: center;
 }
 
 
@@ -148,4 +166,52 @@ tbody tr:nth-child(even) {
 #trackButton {
     margin-top: 20px;
     width: 100%;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    z-index: 1000; /* Sit on top */
+}
+
+.modal-content {
+    background-color: #fff;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+#apiKeyInput {
+    width: 100%;
+    margin: 6px;
+}
+.modal-content>button {
+    width: 100%;
+    margin: 6px;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.grey-text {
+    color: grey;
+    font-size: 0.9em; /* Slightly smaller font-size */
 }
