feat: add graph icon link to header - Increased API record limit - Improve formatting in HTML and CSS

--- a/burn-temps/css/styles.css
+++ b/burn-temps/css/styles.css
@@ -40,6 +40,11 @@ header {
     cursor: pointer;
 }
 
+.graph-icon {
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+}
 
 .refresh-icon.disabled {
     fill: #aaa;
