--- a/burn-temps/css/styles.css
+++ b/burn-temps/css/styles.css
@@ -89,6 +89,9 @@ th, td {
     text-align: left;
     border: 1px solid #e0e0e0;
 }
+thead>tr>th {
+    text-align: center;
+}
 
 tbody tr:nth-child(even) {
     background-color: #f2f2f2;
